Update author name and website link in home and footer

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -27,7 +27,7 @@
 
 <section class="mb-16">
 
-    {{ $cat := "astronomy" }}
+    {{ $cat := "Ahmed Elsayed" }}
 
     <div class="flex items-center mb-6">
 
