--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -39,7 +39,7 @@
 
   <div class="border-t pt-4">
 
-    <p class="text-sm">Copyright © {{ now.Year }}. All rights reserved. <a href="https://insertapps.com/en/" target="_blank" rel="noopener">Insertapps.com</a></p>
+    <p class="text-sm">Copyright © {{ now.Year }}. All rights reserved. <a href="https://omarcodes.me/" target="_blank" rel="noopener">Omar Ahmed</a></p>
 
   </div>
   
