Update image source in home.html and aside-banner.html

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -88,6 +88,6 @@
 
 <!-- / End recent post  -->
 
-  {{- partial "content/newsletter.html" . -}}
+  <!-- {{- partial "content/newsletter.html" . -}} -->
 
 {{ end }}
