Update footer author website link

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -39,7 +39,7 @@
 
   <div class="border-t pt-4">
 
-    <p class="text-sm">Copyright © {{ now.Year }}. All rights reserved. <a href="https://omarcodes.me/" target="_blank" rel="noopener">Omar Ahmed</a></p>
+    <p class="text-sm">Copyright © {{ now.Year }}. All rights reserved. <a href="https://omarx.uk/" target="_blank" rel="noopener">Omar Ahmed</a></p>
 
   </div>
   
